delete mapping impl and tests
